--- a/templates/search.html
+++ b/templates/search.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h2>Search Our Library</h2>
-    <form action="{{url_for('search_result')}}" method="get">
+    <form action="{{url_for('search_result')}}" method="post">
         <label for="title">
             <span>Title:</span>
             <input type="text" id="game_title" name="game_title"/>
